--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.0.0
 pylint==2.4.4
+python-dotenv==0.12.0
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
