--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ chardet==3.0.4
 cssselect2==0.3.0
 defusedxml==0.6.0
 Django==3.0.5
+django-localflavor==3.1
+django-parler==2.2
+django-rosetta==0.9.6
 flower==0.9.3
 html5lib==1.0.1
 idna==2.9
@@ -22,11 +25,14 @@ kombu==4.6.8
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.0.0
+polib==1.1.1
 pycparser==2.20
 pylint==2.4.4
 Pyphen==0.9.5
 python-dotenv==0.12.0
+python-stdnum==1.16
 pytz==2019.3
+redis==3.5.3
 requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
